[gd_scene load_steps=5 format=3 uid="uid://b0i77543v5a01"]

[ext_resource type="Script" path="res://Scripts/rifle.gd" id="1_vdyjj"]
[ext_resource type="Texture2D" uid="uid://drn6pb508tn5f" path="res://Sprites/rifle-sprite.png" id="2_cnawx"]

[sub_resource type="Animation" id="Animation_8ixup"]
resource_name = "shoot"
length = 0.4
step = 0.01
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.02, 0, 0.02, 1, 0, 0.02, 0.2, 0.4, 1, 0, 0.02, 0)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(-1.11629e-08, -1.5708, -0.258239), Vector3(0, -1.5708, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bhx6u"]
_data = {
"shoot": SubResource("Animation_8ixup")
}

[node name="Rifle" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00145085, 0)
script = ExtResource("1_vdyjj")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(-3.61999e-07, 0, -0.1, 0, 0.1, 0, 0.1, 0, -3.61999e-07, 0, 0.02, 0)
texture = ExtResource("2_cnawx")

[node name="rifle_barrel" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.291308)
target_position = Vector3(0, 0, -1)

[node name="AnimationPlayerRifle" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bhx6u")
}

[node name="fire_rate" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="fire_rate" to="." method="_on_fire_rate_timeout"]
